<resources>
    <string name="app_name">喜闻乐评</string>

    <string name="help_chek">帮你算</string>
    <string name="next_step">下一步</string>
    <string name="ok">确定</string>
    <string name="action_settings">Settings</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="login">登陆</string>
    <string-array name="Market_name">
        <item>农工商</item>
        <item>乐购</item>
        <item>家乐福</item>
    </string-array>
    <string-array name="Catalogs">
        <item>食品饮料</item>
        <item>日用家化</item>
        <item>母婴亲子</item>
        <item>食品生鲜</item>
        <item>美容护理</item>
        <item>厨卫清洁</item>
        <item>母婴玩具</item>
    </string-array>
    <!--食品饮料-->
    <string-array name="food_drink_catalog">
        <item>冷饮</item>
        <item>乳品</item>
        <item>调料</item>
        <item>膨化食品</item>
        <item>酒</item>
        <item>麦片</item>
        <item>罐头</item>
        <item>腌制品</item>
        <item>食用油</item>
        <item>饼干</item>
    </string-array>
    <!--日用家化-->
    <string-array name="daily_necessities_catalog">
        <item>洗发护发</item>
        <item>洗衣用品</item>
        <item>蚊香</item>
        <item>纸巾</item>
        <item>口腔护理</item>
        <item>卫生棉</item>
    </string-array>
    <!--母婴亲子-->
    <string-array name="mami_baby_catalog">
        <item>奶粉</item>
        <item>沐浴护肤</item>
        <item>尿片</item>
    </string-array>
    <!--食品生鲜-->
    <string-array name="fresh_food_catalog">
        <item>调味料</item>
        <item>麦片</item>
        <item>饮料</item>
        <item>饼干</item>
    </string-array>
    <!--美容护理-->
    <string-array name="aesthetic_nursing_catalog">
        <item>洗发露</item>
        <item>沐浴乳</item>
        <item>肥皂</item>
        <item>香皂</item>
        <item>护发素</item>
    </string-array>
    <!--厨卫清洁-->
    <string-array name="washing_nursing_catalog">
        <item>洁厕宝</item>
        <item>洗洁精</item>
    </string-array>
    <!--母婴玩具-->
    <string-array name="baby_toys_catalog">
        <item>拖拉机</item>
        <item>飞机</item>
        <item>挖掘机</item>
    </string-array>
    <string name="title_activity_market_sel">MarketSelActivity</string>
    <string name="loadmore_label">加载更多</string>
    <string name="loading_label">正在加载</string>

    <string name="hello_world">Hello world!</string>
    <string name="curten">下一步</string>
    <string name="title_activity_catlogs_sel">CatlogsSelActivity</string>
    <string name="title_activity_detail_catlogs">DetailCatlogsActivity</string>
    <string name="title_activity_products_list">ProductsListActivity</string>
    <string name="title_activity_wel">WelActivity</string>
    <string name="title_activity_user_center">UserCenterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_giude">GiudeActivity</string>
    <string name="title_activity_help_check">HelpCheckActivity</string>
    <string name="title_activity_market_adress">MarketAdressActivity</string>
    <string name="content">帮你算中所有促销信息和商品价格都是来自各商超官网公布的及时海报，任何疑问请与商超现场服务人员洽谈！</string>
    <string name="title_activity_information_collection">InformationCollectionActivity</string>
    //根据名称获取品牌列表
    <string name="food_drink">食品饮料</string>
    <string name="mom_baby">母婴亲子</string>
    <string name="day_user_family">日用家化</string>
    <string name="cosmetic_skin">护肤彩妆</string>
    <string name="title_activity_jpush">JpushActivity</string>
    <string name="title_activity_accumulated_shop">AccumulatedShopActivity</string>
    <string name="title_activity_accumulate_shop_detail">AccumulateShopDetailActivity</string>
    <string name="title_activity_user_space">UserSpaceActivity</string>
    <string name="title_activity_basic_information">BasicInformationActivity</string>
    <string name="title_activity_help_check_goods_detail">HelpCheckGoodsDetailActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_list_record_detail">ListRecordDetailActivity</string>
    <string name="drawopen">打开</string>
    <string name="drawclose">关闭</string>
    <string name="title_activity_commodity">CommodityActivity</string>
    <string name="title_activity_exchange_prize_detail">ExchangePrizeDetailActivity</string>
    <string name="title_activity_buy_plan">BuyPlanActivity</string>
    <string name="title_activity_buy_plan_actitiy">BuyPlanActitiy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="title_activity_buy_list">BuyListActivity</string>
    <string name="title_activity_login_guide">LoginGuideActivity</string>
    <string name="title_activity_quick_register">QuickRegisterActivity</string>
    <string name="title_activity_shop_address_info_page">ShopAddressInfoPageActivity</string>
    <string name="title_activity_fast_regist">FastRegistActivity</string>
    <string name="title_activity_modify_password_page">ModifyPasswordPageActivity</string>
    <string name="title_activity_forget_psw">ForgetPswActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="hot_brand">热门品牌</string>
    <string name="hot_channels">热门渠道</string>
    <string name="history_search">历史搜索</string>
    <string name="please_input_city_name">请输入城市名称</string>
    <string name="title_activity_proposed_project">ProposedProjectActivity</string>
    <string name="title_activity_my_chat">MyChatActivity</string>
    <string name="title_activity_my_score">MyScoreActivity</string>
    <string name="title_activity_my_setting">MySettingActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="my_detil">个人信息</string>
    <string name="edit_password">密码修改</string>
    <string name="bond_account">退出登录</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="title_activity_help_center">HelpCenterActivity</string>
    <string name="title_activity_my_account_detail">MyAccountDetailActivity</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="unbind">解除绑定</string>
    <string name="mydetils">个人简介:</string>
    <string name="input_summer">请输入简介</string>
    <string name="setup">设置</string>
    <string name="btn_photo_take">相册</string>
    <string name="btn_photo_select">拍照</string>
    <string name="cancle">取消</string>
    <string name="tip_title">提示</string>

</resources>
