<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mb.mmdepartment.activities.SearchActivity">
    <include layout="@layout/toolbar_main_inner"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hot_brand"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/hot_brand_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hot_channels"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/hot_channels_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/history_search"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/history_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
