<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yieryi.gladtohear.activities.InformationCollectionActivity">
    <include layout="@layout/toolbar"></include>
    <com.mb.mmdepartment.view.SwipeRefreshView
        android:id="@+id/swipeRefreshView"
        android:background="@color/color_white"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <FrameLayout
           android:id="@+id/information_collection_content"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

       </FrameLayout>
    </com.mb.mmdepartment.view.SwipeRefreshView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/food_drink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/color_white"
            android:padding="@dimen/ten_dip"
            android:gravity="center"
            android:background="#aaff794c"
            android:drawableLeft="@mipmap/food_drinnk"
            android:text="@string/food_drink"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_half_red"
            />
        <TextView
            android:id="@+id/mom_baby"
            android:layout_width="wrap_content"
            android:textColor="@color/color_white"
            android:layout_height="match_parent"
            android:padding="@dimen/ten_dip"
            android:drawableLeft="@mipmap/mom_baby"
            android:background="@color/text_little_half_red"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mom_baby"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_half_red"
            />
        <TextView
            android:id="@+id/day_user_family"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_white"
            android:padding="@dimen/ten_dip"
            android:background="@color/text_little_half_red"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/family_home"
            android:gravity="center"
            android:text="@string/day_user_family"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/text_half_red"
            />
        <TextView
            android:id="@+id/cosmetic_skin"
            android:layout_width="wrap_content"
            android:textColor="@color/color_white"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/skin_color"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/text_little_half_red"
            android:padding="@dimen/ten_dip"
            android:text="@string/cosmetic_skin"
            />
    </LinearLayout>

</LinearLayout>
