<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:padding="10dp"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp" >


                <ImageView
                    android:id="@+id/iv_header"
                    android:layout_width="100dp"
                    android:src="@mipmap/iv_hearder_default"
                    android:layout_height="100dp" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@mipmap/touxiang" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/fengexian" />

        <LinearLayout
            android:id="@+id/btn_mydetil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_login_username" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/my_detil" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/youbianjiantou" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/fengexian" />

        <LinearLayout
            android:id="@+id/btn_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_login_password" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:text="@string/edit_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/youbianjiantou" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/fengexian" />
        <TextView
            android:id="@+id/btn_exit_login"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:background="@drawable/cicle_back_login_tv"
            android:gravity="center"
            android:text="@string/bond_account" />
    </LinearLayout>

</ScrollView>