<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="10dp"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/shurukuang"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 用  户  名:" />

                <TextView
                    android:padding="10dp"
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/tv_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/shurukuang"
                    android:hint="@string/input_nickname"
                    android:paddingLeft="85dp"
                    android:textColorHint="@color/transparent_gray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="  昵       称:" />
            </RelativeLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@mipmap/phone_bacckground"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/phone_bacckground"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_unbind"
                    style="@style/tv_middle16_white_sl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@mipmap/shurukuang3"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/unbind" />
            </LinearLayout>-->
            <!-- 选择性别 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:paddingBottom="10dip"
                android:paddingTop="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="  性       别:" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dip" >
                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_sex_selecter"
                        android:paddingLeft="20dp"
                        android:text="男" />

                    <RadioButton
                        android:id="@+id/rb_women"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_sex_selecter"
                        android:paddingLeft="20dp"
                        android:text="女" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/shurukuang"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:text=" 出生年月:" />

                <TextView
                    android:id="@+id/tv_born"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/color_black"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:background="@mipmap/icon_down" />
            </LinearLayout>
            <!-- 选择职业类型 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/shurukuang"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="职业类型:"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/sp_job"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:popupBackground="#ffffffff"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:background="@mipmap/icon_down" />
            </LinearLayout>
            <!-- 选择居住区域 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/shurukuang"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="居住区域:"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/sp_address"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:popupBackground="#ffffffff"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:background="@mipmap/icon_down" />
            </LinearLayout>
            <!-- 收入范围 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/shurukuang"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="收入范围:"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/sp_money"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:popupBackground="#ffffffff"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:background="@mipmap/icon_down" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mydetils" />

            <EditText
                android:id="@+id/et_summer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/input_summer"
                android:lines="4"
                android:textColorHint="@color/transparent_gray" />
            <!-- 提示 -->
            <TextView
                android:id="@+id/btn_set_up"
                style="@style/tv_middle16_white_sl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@mipmap/anniukuang"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/setup" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>